--- a/pkg/geosphere/inst/doc/geosphere.Rnw
+++ b/pkg/geosphere/inst/doc/geosphere.Rnw
@@ -6,6 +6,8 @@
 \usepackage{indentfirst}
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
+\usepackage{hanging}
+
 
 %\VignetteIndexEntry{The geosphere package}
 
@@ -25,9 +27,9 @@ foo <- packageDescription("geosphere")
 
 \section{Introduction}
 
-This vignette describes the R package '\verb@geosphere@'. The package implements spherical trigonometry functions for geographic applications. Most functions have applications in navigation, but others are more general. For example, to estiate the location of an object at a given direction and distance. 
+This (early draft) vignette describes the R package '\verb@geosphere@'. The package implements spherical trigonometry functions for geographic applications. Most functions have applications in navigation, but others are more general. For example, to estimate the location of an object at a given direction and distance. 
   
-There are a number of functions to compute distance and direction (bearing, azimuth, course) along Great Circles (= shortest distance on a sphere, or "as the crow flies") and along rhumb lines (lines of constant direction). There are also funtctions to compute intersections of great circles, and of rhumb lines, and daylength.
+There are a number of functions to compute distance and direction (bearing, azimuth, course) along Great Circles (= shortest distance on a sphere, or "as the crow flies") and along rhumb lines (lines of constant direction). There are also functions to compute intersections of great circles, and of rhumb lines, and daylength.
 
 Geographic locations must be specified in latitude and longitude in degrees (and NOT in radians). Degrees are (obviously) in decimal notation. Thus 12 degrees, 30 minutes, 10 seconds = 12 + 10/60 + 30/3600 =  12.175 degrees. The Southern and Western hemispheres have a negative sign.
 
@@ -37,9 +39,17 @@ Directions are expressed in degrees (N = 0 and 360,  E = 90, S = 180, and W = 27
 
 This is one of the first versions of this package, so please look out for bugs and let us know if you find any.
 
+The functions in this package are mostly based on formulae provided by Ed Williams (\url{http://williams.best.vwh.net/ftp/avsig/avform.txt}, and partly on javascript implementations of these formulae by Chris Veness (\url{http://www.movable-type.co.uk/scripts/latlong.html} )
 
-\section{Distance}
-There are four different functions to comupte distance between two points. These are, in order of increasing complexity of the algorithm, the 'Law of cosines', 'haversine', 'Vincenty Sphere' and 'Vincenty Ellipsoid' methods. The first three assume the earth to be a sphere, while the 'Vincenty Ellipsoid' assumes it is an elliposoid (which is closer to the truth). The results from the first three functions are identical for pratical purposes. This was not the case on earlier computers because they had lower precision floating number computations (8 digits compared to the current 16 digits). There are very small differences between the 'law of the Cosine' and other two methods, at very short distances, and even smaller differences between the 'haversine' and 'Vincenty Sphere' methods at larger distances. 
+
+\section{Great Circle Distance}
+
+There are four different functions to compute distance between two points. These are, in order of increasing complexity of the algorithm, the 'Spherical law of cosines', 'Haversine', 'Vincenty Sphere' and 'Vincenty Ellipsoid' methods. The first three assume the earth to be a sphere, while the 'Vincenty Ellipsoid' (Vincenty, 1975) assumes it is an ellipsoid (which is closer to the truth). 
+
+The results from the first three functions are identical for practical purposes. The Haversine ('half-versed-sine') formula was published by R.W. Sinnott in 1984, although it has been known for much longer. At that time computational precision was lower than today (15 digits precision). With current precision, the spherical law of cosines formula appears to give equally good results down to very small distances. If you want greater accuracy, you could use the distVincentyEllipsoid method. 
+
+Below the differences between the three spherical methods are illustrated. At very short distances, there are small differences between the 'law of the Cosine' and the other two methods. There are even smaller differences between the 'Haversine' and 'Vincenty Sphere' methods at larger distances. 
+
 
 <<fig=TRUE , echo=TRUE>>=
 library(geosphere)
@@ -65,12 +75,104 @@ plot(dvsp/1000, (dvsp-dvse)/1000, col='blue', xlab='Vincenty Sphere Distance (km
         ylab="Difference between 'Vincenty Sphere' and 'Vincenty Ellipsoid' methods (km)")
 @
 
-\section{Great Circles}
+
+\section{Points on Great Circles}
+
+Great Circles can be defined with the function 'greatCircle', using two points on the Great Circle to define it, and an additional argument to indicate how many points on the great circle should be returned. gcIntermediate only returns points on the great circle that are on the track of shortest distance between the two points defining the great circle.
+
+<<fig=TRUE , echo=TRUE>>=
+LAX <- c(-118.40, 33.95)
+JFK <- c(-73.78333,  40.63333)
+data(wrld)
+plot(wrld, type='l')
+gc <- greatCircle(LAX, JFK)
+lines(gc, lwd=2, col='blue')
+gci <- gcIntermediate(LAX, JFK)
+lines(gci, lwd=4, col='green')
+points(rbind(LAX, JFK), col='red', pch=20, cex=2)
+@
+
+You can use the functions illustrated below to find out what the maximum latitude is that a great circle will reach; at what latitude it crosses a specified longitude; or at what longitude it crosses a specified latitude. From the map below it appears that Clairaut's formula, used in gcMaxLat is not very accurate. Through optimization, and using greatCircle, a more accurate value was found. The southern-most point is the antipode of the northern-most point.
+
+<<fig=TRUE , echo=TRUE>>=
+ml <- gcMaxLat(LAX, JFK)
+lat0 <- gcLat(LAX, JFK, lon=0)
+lon0 <- gcLon(LAX, JFK, lat=0)
+plot(wrld, type='l')
+lines(gc, lwd=2, col='blue')
+points(ml, col='red', pch=20, cex=2)
+points(cbind(0, lat0), pch=20, cex=2, col='yellow') 
+points(t(rbind(lon0, 0)), pch=20, cex=2, col='green' )
+
+f <- function(lon){gcLat(LAX, JFK, lon)}
+opt <- optimize(f, interval=c(-180, 180), maximum=TRUE)
+points(opt$maximum, opt$objective, pch=20, cex=2, col='dark green' )
+anti <- antipode(c(opt$maximum, opt$objective)) 
+points(anti, pch=20, cex=2, col='dark blue' )
+@
+
+Points of intersection of two Great Circles:
+
+<<fig=TRUE , echo=TRUE>>=
+SFO <- c(-118, 36)
+AMS <- c(4.75, 52.31)
+gc2 <- greatCircle(AMS, SFO)
+plot(wrld, type='l')
+lines(gc, lwd=2, col='blue')
+lines(gc2, lwd=2, col='green')
+int <- gcIntersect(LAX, JFK, SFO, AMS)
+points(rbind(int[,1:2], int[,3:4]), col='red', pch=20, cex=2)
+@
+
+\section{Great Circle Tracks}
+
+Below we first compute the distance and direction from LAX to JFK. These are then used to compute the point from LAX at that distance in that (initial) direction. Direction changes continuously when traveling along a Great Circle. The final direction, when approaching JFK, is also given.  
+
+<<geo5>>=
+d <- distCosine(LAX, JFK)
+d
+b <- direction(LAX, JFK)
+b
+destPoint(LAX, b, d)
+JFK
+finalDirection(LAX, JFK)
+@
+
+What if we went off-course and were flying over OFF? The closest point on the planned route (p) can be computed with the alongTrackDistance and destPoint functions. The distance from 'p' to OFF can be computed with the crossTrackDistance function. The light green line represents the along-track distance, and the dark green line represents the cross-track distance.
+
+<<fig=TRUE , echo=TRUE>>=
+OFF <- c(-101.18, 42.94)
+atd <- alongTrackDistance(LAX, JFK, OFF)
+p <- destPoint(LAX, b, atd)
+plot(wrld, type='l', xlim=c(-130,-60), ylim=c(22,52))
+lines(gci, col='blue', lwd=2)
+points(rbind(LAX, JFK), col='red', pch=20, cex=2)
+points(OFF[1], OFF[2], pch=20, col='blue', cex=2)
+lines(gcIntermediate(LAX, p), col='green', lwd=3)
+lines(gcIntermediate(OFF, p), col='dark green', lwd=3)
+points(p, pch=20, col='red', cex=2)
+crossTrackDistance(LAX, JFK, OFF)
+distCosine(p, OFF)
+@
 
 
 
 \section{Rhumb lines}
 
+Rhumb (from the Spanish word for course, 'rumbo') lines are straight lines on a Mercator projection map. They were used in navigation because it is easier to follow a constant compass bearing than to continually adjust direction as is needed to follow a great circle, even though rhumb lines are normally longer than great-circle (orthodrome) routes. Most rhumb lines will gradually spiral towards one of the poles. 
+
+<<fig=TRUE , echo=TRUE>>=
+data(merc)
+plot(merc, type='l')
+@
+
+
+\section{References}
+\begin{hangparas}{3em}{1}
+
+\noindent Vincenty, T. 1975. Direct and inverse solutions of geodesics on the ellipsoid with application of nested equations. Survey Review 23(176): 88-93. Available here: \url{http://www.movable-type.co.uk/scripts/latlong-vincenty.html} 
+
+\end{hangparas}
 
 
 \end{document}
