--- a/pkg/geosphere/inst/doc/geosphere.Rnw
+++ b/pkg/geosphere/inst/doc/geosphere.Rnw
@@ -200,7 +200,7 @@ finalBearing(LA, NY)
 
 \section{Getting off-track}
 
-What if we went off-course and were flying over Minneapolis (MS)? The closest point on the planned route (p) can be computed with the alongTrackDistance and destPoint functions. The distance from 'p' to MS can be computed with the crossTrackDistance function. The light green line represents the along-track distance, and the dark green line represents the cross-track distance.
+What if we went off-course and were flying over Minneapolis (MS)? The closest point on the planned route (p) can be computed with the alongTrackDistance and destPoint functions. The distance from 'p' to MS can be computed with the dist2gc (distance to great circle, or cross-track distance) function. The light green line represents the along-track distance, and the dark green line represents the cross-track distance.
 
 <<fig=TRUE , echo=TRUE>>=
 atd <- alongTrackDistance(LA, NY, MS)
@@ -212,20 +212,20 @@ points(MS[1], MS[2], pch=20, col='blue', cex=2)
 lines(gcIntermediate(LA, p), col='green', lwd=3)
 lines(gcIntermediate(MS, p), col='dark green', lwd=3)
 points(p, pch=20, col='red', cex=2)
-crossTrackDistance(LA, NY, MS)
+dist2gc(LA, NY, MS)
 distCosine(p, MS)
 @
 
 
 \section{Distance to a polyline}
 
-The two function describe above are used in the distPoint2Lines function that computes the shortest distance between a set of points and a set of spherical polylines (or polygons).
+The two function describe above are used in the dist2Line function that computes the shortest distance between a set of points and a set of spherical poly-lines (or polygons).
 
 <<fig=TRUE , echo=TRUE>>=
 line <- rbind(c(-180,-20), c(-150,-10), c(-140,55), c(10, 0), c(-140,-60))
 pnts <- rbind(c(-170,0), c(-75,0), c(-70,-10), c(-80,20), c(-100,-50),
            c(-100,-60), c(-100,-40), c(-100,-20), c(-100,-10), c(-100,0))
-d = distPoint2Line(pnts, line)
+d = dist2Line(pnts, line)
 plot( makeLine(line), type='l')
 points(line)
 points(pnts, col='blue', pch=20)
