git-svn-id: svn://svn.r-forge.r-project.org/svnroot/geosphere@117 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/geosphere/ChangeLog
+++ b/pkg/geosphere/ChangeLog
@@ -1,3 +1,6 @@
+8 Sept 2010
+bug fix in .pointsToMatrix (reported by Joe)
+
 26 August 2010
 New functions:
 distPoint2Lines computes the (spherical) distance between points and polylines (and polygons borders).
