--- a/pkg/geosphere/ChangeLog
+++ b/pkg/geosphere/ChangeLog
@@ -1,3 +1,6 @@
+4 Nov 2010
+Additional options to gcIntermediate and greatCircle to return SpatalLines (that are cut in two when crossing the date line)
+
 8 Sept 2010
 bug fix in .pointsToMatrix (reported by Joe)
 
