--- a/pkg/geosphere/ChangeLog
+++ b/pkg/geosphere/ChangeLog
@@ -1,3 +1,6 @@
+-- 13 Jan 2011, version 1.2-18
+New argument sepNA in gcIntermediate, suggested by Lee Butterman
+
 -- 1 Jan 2011, version 1.2-17
 Merged functions distm and distm2 into distm
 Function with new distance algorithm "distMeeus"
