git-svn-id: svn://svn.r-forge.r-project.org/svnroot/geosphere@135 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/geosphere/inst/doc/geosphere.Rnw
+++ b/pkg/geosphere/inst/doc/geosphere.Rnw
@@ -300,7 +300,7 @@ points(b, col='red', pch='x')
 
 \section{Daylength}
 
-You can compute daylenght according to the formula by (Forsythe et al, 1995). For any day of the year (an integer between 1 and 365; or a 'Date' object.
+You can compute daylenght according to the formula by Forsythe et al. (1995). For any day of the year (an integer between 1 and 365; or a 'Date' object.
 
 <<fig=TRUE , echo=TRUE>>=
 as.Date(80, origin='2009-12-31')
