git-svn-id: svn://svn.r-forge.r-project.org/svnroot/geosphere@156 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/geosphere/ChangeLog
+++ b/pkg/geosphere/ChangeLog
@@ -1,3 +1,6 @@
+-- 28 August 2011, version 1.2-25
+Correction to gcIntermediate. Points were not exactely equidistant. Error spotted by Jason Davies.
+
 -- 18 May 2011, version 1.2-21
 Normalizing longitude to -180..180 in midPoint. Suggested by Aaron Hardin
 
