--- a/pkg/geosphere/ChangeLog
+++ b/pkg/geosphere/ChangeLog
@@ -1,3 +1,7 @@
+-- 26 February 2012, version 1.2-26
+Fixec bug in distMeeus. It returned NaN when the distance between two points was 0. Reportedby Daniel Reidpath
+New function geomean to compute the mean of a set of coordinates (optionally with weights)
+
 -- 28 August 2011, version 1.2-25
 Correction to gcIntermediate. Points were not exactely equidistant. Error spotted by Jason Davies.
 
