--- a/pkg/geosphere/ChangeLog
+++ b/pkg/geosphere/ChangeLog
@@ -1,4 +1,5 @@
 Fixed bug in bearingRhumb when using multiple points (incorrect results were returned). Reported by Bart Kranstauber
+Added 'ID' output to dist2Line
 
 -- 4 March 2012, version 1.2-27
 Bug fix in antipodal; reported by Bart Kranstauber
