--- a/pkg/geosphere/ChangeLog
+++ b/pkg/geosphere/ChangeLog
@@ -1,5 +1,6 @@
 Fixed bug in bearingRhumb when using multiple points (incorrect results were returned). Reported by Bart Kranstauber
 Added 'ID' output to dist2Line
+distVincentyEllipsoid returned a distance of 0 between NA and NA; now it returns NA as intended (reported by Sebastian Luque)
 
 -- 4 March 2012, version 1.2-27
 Bug fix in antipodal; reported by Bart Kranstauber
