git-svn-id: svn://svn.r-forge.r-project.org/svnroot/geosphere@185 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/geosphere/vignettes/geosphere.Rnw
+++ b/pkg/geosphere/vignettes/geosphere.Rnw
@@ -12,6 +12,7 @@
 %\VignetteIndexEntry{Introduction to the geosphere package}
 
 \SweaveOpts{keep.source=TRUE}
+\SweaveOpts{png=TRUE, pdf=FALSE}
 
 \begin{document}
 
